Cleanup, add better messaging to painter, add some new painter types