@@ -3,13 +3,11 @@ package org.mcsg.bot.command.commands;
 import java.awt.Color;
 import java.awt.Graphics;
 import java.awt.Graphics2D;
-import java.awt.Image;
 import java.awt.image.BufferedImage;
-import java.awt.image.ColorModel;
-import java.awt.image.WritableRaster;
 import java.io.File;
-import java.io.IOException;
 import java.net.URL;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -17,8 +15,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 
 import javax.imageio.ImageIO;
@@ -28,6 +24,7 @@ import javax.swing.JPanel;
 import org.eclipse.jetty.util.FuturePromise;
 import org.mcsg.bot.api.BotChannel;
 import org.mcsg.bot.api.BotCommand;
+import org.mcsg.bot.api.BotSentMessage;
 import org.mcsg.bot.api.BotServer;
 import org.mcsg.bot.api.BotUser;
 import org.mcsg.bot.drawing.AbstractPainter;
@@ -59,13 +56,9 @@ import org.mcsg.bot.drawing.painters.Smudge;
 import org.mcsg.bot.drawing.painters.Spooky;
 import org.mcsg.bot.drawing.painters.SprayPaint;
 import org.mcsg.bot.drawing.painters.Sunset;
-import org.mcsg.bot.drawing.painters.Time;
 import org.mcsg.bot.util.Arguments;
 import org.mcsg.bot.util.MapWrapper;
 import org.mcsg.bot.util.VideoHelper;
-
-import io.humble.ferry.AtomicInteger;
-import io.humble.video.Codec;
 
 public class ImagePainterCommand implements BotCommand {
 
@@ -123,19 +116,32 @@ public class ImagePainterCommand implements BotCommand {
 		Arguments arge = new Arguments(args, "background/bg arg", "resolution/res arg", "filter arg", "import arg",
 				"video/v");
 
+		Instant now = Instant.now();
 		String randGen = getRandomKey(painters);
 		List<String> generators = new ArrayList<>();
 
-		boolean set = false;
 		if (arge.getArgs().length > 0) {
 			generators.addAll(Arrays.asList(arge.getArgs()[0].split(",")));
-
 		}
+		
+		if(generators.size() > 5 && !server.getBot().getPermissionManager().hasPermission(server, user, "img.maxgen")) {
+			chat.sendMessage("(" + user.getUsername() + ") Too many generators, limiting to 5." );
+			generators = generators.subList(0, 5);
+		}
+
+		if (generators.size() == 0) {
+			if (arge.hasSwitch("import")) {
+				generators.add("empty");
+			} else {
+				generators.add(getRandomKey(painters));
+			}
+		}
+
+		BotSentMessage loadingMessage = chat
+				.sendMessage("(" + user.getUsername() + ") Generating image: " + listToString(generators));
 
 		int width = 1920;
 		int height = 1080;
-
-		System.out.println(arge.getSwitches());
 
 		if (arge.hasSwitch("resolution")) {
 			String res = arge.getSwitch("resolution");
@@ -148,16 +154,12 @@ public class ImagePainterCommand implements BotCommand {
 
 		if (arge.hasSwitch("import")) {
 			img = ImageIO.read(new URL(arge.getSwitch("import")));
-			if (generators.size() == 0) {
-				generators.add("empty");
-			}
 		}
 
 		if (img == null) {
 			img = new BufferedImage(width, height, BufferedImage.TYPE_INT_ARGB);
 		}
-		System.out.println(img);
-		System.out.println(generators);
+
 		FuturePromise<Boolean> future = new FuturePromise<Boolean>();
 
 		if (arge.hasSwitch("video")) {
@@ -177,11 +179,13 @@ public class ImagePainterCommand implements BotCommand {
 
 		Color bg = Color.BLACK;
 
-		if ("none".equalsIgnoreCase(arge.getSwitch("background"))) {
-			bg = null;
-		}
 		if (arge.hasSwitch("background")) {
-			bg = Color.decode(arge.getSwitch("background"));
+			String background = arge.getSwitch("background");
+			if ("none".equalsIgnoreCase(background)) {
+				bg = null;
+			} else {
+				bg = Color.decode(background);
+			}
 		}
 
 		if (!arge.hasSwitch("import"))
@@ -194,7 +198,6 @@ public class ImagePainterCommand implements BotCommand {
 			}
 			AbstractPainter painter = generator.getConstructor(BufferedImage.class).newInstance(img);
 			painter.paint(wrap);
-
 		}
 
 		if (arge.getSwitches().containsKey("filter")) {
@@ -202,7 +205,7 @@ public class ImagePainterCommand implements BotCommand {
 
 				Class<? extends Filter> fClass = filters.get(fstr);
 				if (fClass != null) {
-					Filter filter = fClass.newInstance();
+					Filter filter = fClass.getConstructor().newInstance();
 					img = filter.filter(img, (Graphics2D) img.getGraphics(), wrap);
 				}
 			}
@@ -212,44 +215,57 @@ public class ImagePainterCommand implements BotCommand {
 		File file = new File(chat.getServer().getBot().getSettings().getDataFolder(),
 				"painter_" + System.currentTimeMillis() + ".png");
 		ImageIO.write(img, "png", file);
-		chat.sendFile(file);
+
+		long seconds = Duration.between(now, Instant.now()).toSeconds();
+		long milisPart = Math.round(100 * (Duration.between(now, Instant.now()).toMillisPart() / 1000.0));
+		chat.sendFile(file, "(" + user.getUsername() + ") Image " + listToString(generators) + " generated in "
+				+ seconds + "." + milisPart + "s");
+
+		loadingMessage.delete();
 	}
 
-	//this is kinda awful but its 2am and I want to sleep without it running out of mem
-	private void generateVideo(BotChannel chat, File file, BufferedImage img, int width, int height, Future<Boolean> future) {
+	private String listToString(List<?> list) {
+		return list.toString().replace("[", "").replace("]", "");
+	}
+
+	// this is kinda awful but its 2am and I want to sleep without it running out of
+	// mem
+	private void generateVideo(BotChannel chat, File file, BufferedImage img, int width, int height,
+			Future<Boolean> future) {
 		List<BufferedImage> frames = Collections.synchronizedList(new ArrayList<>());
-		int vWidth = Math.min(1280,  width);
+		int vWidth = Math.min(1280, width);
 		int vHeight = Math.min(720, height);
 		new Thread(() -> {
 			while (!future.isDone()) {
 				sleep(1);
-				frames.add(resize(img,vWidth, vHeight));
+				frames.add(resize(img, vWidth, vHeight));
 			}
 			System.out.println("Done creating frames");
 		}).start();
 		new Thread(() -> {
 			try {
 				System.out.println("Staring frame dumper");
-				VideoHelper.dumpFrames(frames, file.getAbsolutePath(), "mp4", null,vWidth, vHeight, future);
+				VideoHelper.dumpFrames(frames, file.getAbsolutePath(), "mp4", null, vWidth, vHeight, future);
 				System.out.println("Frame dumper completed");
 				chat.sendFile(file);
+				file.delete();
 			} catch (Exception e) {
 				// TODO Auto-generated catch block
 				e.printStackTrace();
 			}
-				
+
 		}).start();
 	}
 
-	public static BufferedImage resize(BufferedImage img, int newW, int newH) { 
+	public static BufferedImage resize(BufferedImage img, int newW, int newH) {
 //	    Image tmp = img.getScaledInstance(newW, newH, Image.SCALE_SMOOTH);
-	    BufferedImage dimg = new BufferedImage(newW, newH, BufferedImage.TYPE_INT_ARGB);
-	    Graphics2D g2d = dimg.createGraphics();
-	    g2d.drawImage(img, 0, 0,newW, newH, null);
-	    g2d.dispose();
+		BufferedImage dimg = new BufferedImage(newW, newH, BufferedImage.TYPE_INT_ARGB);
+		Graphics2D g2d = dimg.createGraphics();
+		g2d.drawImage(img, 0, 0, newW, newH, null);
+		g2d.dispose();
 
-	    return dimg;
-	}  
+		return dimg;
+	}
 
 	private void frame(BufferedImage img) {
 		JFrame frame = new JFrame();
@@ -281,7 +297,6 @@ public class ImagePainterCommand implements BotCommand {
 		g.fillRect(0, 0, img.getWidth(), img.getHeight());
 
 		g.setColor(bcolor);
-
 	}
 
 	@Override
